// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getProjectMetadata activities passes basic sanity 1`] = `
[
  {
    "action": "fake-action",
    "category": "ActivityCategory",
    "clientOnly": true,
    "defaultName": "ActivityDefaultName",
    "deprecated": "ActivityDeprecated",
    "description": "ActivityDescription",
    "displayName": "ActivityDisplayName",
    "helpUrl": "http://help/TestActivity",
    "inputs": {
      "input1": {
        "clientOnly": true,
        "defaultExpressionHint": "Input1DefaultExpressionHint",
        "defaultValue": "Input1DefaultValue",
        "deprecated": "Input1Deprecated",
        "description": "Input1Description",
        "displayName": "Input1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "input1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Input1Placeholder",
        "serverOnly": undefined,
        "supportedApps": [
          "gvh",
        ],
        "typeName": "string",
        "unsupportedApps": undefined,
      },
      "input2": {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Input2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "input2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "isHidden": true,
    "onlineOnly": true,
    "outputs": {
      "output1": {
        "clientOnly": true,
        "defaultExpressionHint": "Output1DefaultExpressionHint",
        "defaultValue": "Output1DefaultValue",
        "deprecated": "Output1Deprecated",
        "description": "Output1Description",
        "displayName": "Output1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "output1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Output1Placeholder",
        "serverOnly": undefined,
        "supportedApps": [
          "gxw",
        ],
        "typeName": "string",
        "unsupportedApps": undefined,
      },
      "output2": {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Output2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "output2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "serverOnly": undefined,
    "suite": "fake-suite",
    "supportedApps": [
      "gvh",
      "gxw",
    ],
    "unsupportedApps": undefined,
  },
]
`;

exports[`getProjectMetadata elements passes basic sanity 1`] = `
[
  {
    "deprecated": "ElementDeprecated",
    "description": "ElementDescription",
    "displayName": "ElementDisplayName",
    "helpUrl": "http://help/TestElement",
    "id": "foo",
    "inputs": {
      "input1": {
        "clientOnly": true,
        "defaultExpressionHint": "Input1DefaultExpressionHint",
        "defaultValue": "Input1DefaultValue",
        "deprecated": "Input1Deprecated",
        "description": "Input1Description",
        "displayName": "Input1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "input1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Input1Placeholder",
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "string",
        "unsupportedApps": [
          "wab",
        ],
      },
      "input2": {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Input2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "input2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "suite": "uuid:proj-id-123",
    "supportedApps": undefined,
    "unsupportedApps": [
      "wab",
    ],
  },
  {
    "deprecated": "ElementDeprecated",
    "description": "ElementDescription",
    "displayName": "ElementDisplayName",
    "helpUrl": "http://help/TestElement",
    "id": "bar",
    "inputs": {
      "input1": {
        "clientOnly": true,
        "defaultExpressionHint": "Input1DefaultExpressionHint",
        "defaultValue": "Input1DefaultValue",
        "deprecated": "Input1Deprecated",
        "description": "Input1Description",
        "displayName": "Input1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "input1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Input1Placeholder",
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "string",
        "unsupportedApps": [
          "wab",
        ],
      },
      "input2": {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Input2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "input2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "suite": "uuid:proj-id-123",
    "supportedApps": undefined,
    "unsupportedApps": [
      "wab",
    ],
  },
  {
    "deprecated": "ElementDeprecated",
    "description": "ElementDescription",
    "displayName": "ElementDisplayName",
    "helpUrl": "http://help/TestElement",
    "id": "baz",
    "inputs": {
      "input1": {
        "clientOnly": true,
        "defaultExpressionHint": "Input1DefaultExpressionHint",
        "defaultValue": "Input1DefaultValue",
        "deprecated": "Input1Deprecated",
        "description": "Input1Description",
        "displayName": "Input1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "input1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Input1Placeholder",
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "string",
        "unsupportedApps": [
          "wab",
        ],
      },
      "input2": {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Input2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "input2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "suite": "uuid:proj-id-123",
    "supportedApps": undefined,
    "unsupportedApps": [
      "wab",
    ],
  },
]
`;
